<?xml version="1.0"?>
<package format="3">
  <name>bridge</name>
  <version>0.0.1</version>
  <description>Dual-mode bridge package for nav2_monitor AlgorithmFeedback.</description>
  <maintainer email="2996199463@qq.com">tokou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_monitor</depend>
  <depend>python3-yaml</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
