<?xml version="1.0"?>
<package format="3">
  <name>runtime_configs</name>
  <version>0.0.1</version>
  <description>Centralized runtime configuration bundle for OTA deployment.</description>
  <maintainer email="2996199463@qq.com">tokou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
